commit#3: fixed spacing issue in images | need to fix spacing of text

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -25,7 +25,7 @@
 
 
 .navmenu{
-    margin-top: 2rem;
+    /* margin-top: 2rem; */
 }
 
 
